Fixed spacing of delete screen

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -67,6 +67,11 @@ select {
 	margin: 0.5rem auto;
 }
 
+.deleteConfirmationLabel {
+	margin-top: 0.5rem;
+	margin-bottom: 1.5rem;
+}
+
 .mapIcon {
 	position: absolute;
 	left: 50%;
@@ -78,12 +83,23 @@ select {
 .confirmDeleteIcon {
 	height: auto;
 	width: auto;
+	margin: 1rem;
 	object-fit: contain;
 }
 
 button {
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
+}
+
+.deleteButtons {
+	display: flex;
+	flex-direction: row;
+	text-align: center;
+	align-items: center;
+}
+.deleteButtons > * {
+	margin: 1rem;
 }
 
 .confirmDeleteBtn {
